Ajuste na exclusão e de cardápios

--- a/src/main/resources/messages.properties
+++ b/src/main/resources/messages.properties
@@ -1,7 +1,7 @@
 000=Erro inesperado
 001=Token expirado, faça login novamente
 002=Token inválido
-023=Erro de conexão com o servidor, tente novamente mais tarde
+003=Erro de conexão com o servidor, tente novamente mais tarde
 004=Acesso negado
 005=Campo obrigatório
 006=Parâmetro inválido
@@ -11,7 +11,7 @@
 010=Produto não encontrado
 011=Identidicador do produto é obrigatório
 012=Usuário não possui cadastro
-013=Fonecedor não possui cardápio cadastrado
+013=Cardápio não encontrado
 014=Produto informado não está cadastrado no cardápio
 015=A categoria informada não existe
 016=Título da categoria é obrigatório
@@ -21,4 +21,5 @@
 020=Campo nome é obrigatório
 021=O campo estoque não pode ser negativo
 022=Subcategoria não encontrada
+023=O cardápio não pode ser excluido, ainda existem produtos relacionado ao carrinho de clientes
 030=Fornecedor já possui um cardápio cadastrado
